Fix text overflow in inbuilt notifications
Closes https://github.com/airdcpp-web/airdcpp-webclient/issues/118

--- a/src/style.css
+++ b/src/style.css
@@ -207,3 +207,7 @@ th {
 	margin-bottom: inherit;
 	max-height: inherit;
 }
+
+.notifications-tl h4.notification-title {
+	overflow: hidden;
+}
